2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] Revamp libpq configury.

	* configure.ac (PG_CHECK_DIR): Delete AC_DEFUN.
	(libpq, libpq-includes, libpq-lib): Delete AC_ARG_WITH.
	(NOTE_ENVVAR): New AC_DEFUN.
	(AC_CHECK_HEADERS_ONCE): Delete macro call.
	(PG_PQ_NOT_YET): Delete AC_DEFUN and all callers.
	(PQ_CPPFLAGS, PQ_LDFLAGS): New AC_ARG_VARs; call ‘NOTE_ENVVAR’
	on them in "checking PostgreSQL particulars" section.
	(AC_CHECK_HEADERS): Check for libpq-fe.h and
	libpq/libpq-fs.h; if not found, error out.
	(AC_CHECK_DECLS): #include <libpq-fe.h> unconditionally.
	(PQ_LDFLAGS): Move ‘-lpq’ suffixing from here...
	(SUBLDFLAGS): ...to here.

2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot] If configure cannot find sane libpq, error out.

	* configure.ac: Include ‘-lpq’ in ‘LDFLAGS’ saving;
	(AC_CHECK_FUNCS): Add ‘PQfreemem’.
	(ac_cv_func_PQfreemem): Check and error out if not sane.

2014-01-23  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Move ‘PQ_LDFLAGS’ munging after ‘LDFLAGS’ restoration.

	* configure.ac: Move ‘-R’ prefixing and ‘-lpq’ suffixing
	from before the ‘LDFLAGS’ saving to after its restoration.

2014-01-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[boot int] Use ‘m4_normalize’ in ‘AC_CHECK_FUNCS’ arg.

	* configure.ac (PQserverVersion): ...here.

2014-01-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[doc] Mention PQ funcs behind dropped procs.

	* doc/ref.texh (Not Included): Add to "Obsolete Functions for COPY"
	C funcs ‘PQputline’, ‘PQgetline’, ‘PQgetlineAsync’, ‘PQendcopy’.

2014-01-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[slog] Use ‘SNUGGLE_CHECK_CLASSIC_HEADERS’.

	* configure.ac (SNUGGLE_CHECK_CLASSIC_HEADERS): New macro call.
	(PG_CHECK_GUILE_HEADER): Delete AC_DEFUN.
	(gh, modsup): Delete PG_CHECK_GUILE_HEADERs.

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] Use Guile-BAUX for src/snuggle/*.h.

	* autogen.sh: Invoke "guile-baux-tool snuggle".

2014-01-09  Thien-Thi Nguyen  <ttn@gnuvola.org>
